# VexGazeboSim

./: README.md  start_gazebo.sh  test_world.sdf
scripts/: drive.py  helpers.py  imu.py  main.py  pid.py  test.py
tank_plugin/: CMakeLists.txt  TankDrivePlugin.cc
testRobot1/: model.config  model.sdf
